--- a/RMW.Tests/packages.config
+++ b/RMW.Tests/packages.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FakeItEasy" version="1.13.1" targetFramework="net45" />
+  <package id="FakeItEasy" version="1.19.0" targetFramework="net451" />
   <package id="Glimpse" version="1.8.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.0.0-beta2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.0.0-beta2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0-beta2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0-beta2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0-beta2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.0.0-beta2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Moq" version="4.1.1309.1617" targetFramework="net45" />
 </packages>
