--- a/RMW.Web/Web.config
+++ b/RMW.Web/Web.config
@@ -13,10 +13,11 @@
       <section name="oauth" type="DotNetOpenAuth.Configuration.OAuthElement, DotNetOpenAuth.OAuth" requirePermission="false" allowLocation="true" />
       <section name="openid" type="DotNetOpenAuth.Configuration.OpenIdElement, DotNetOpenAuth.OpenId" requirePermission="false" allowLocation="true" />
     </sectionGroup>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"></section>
-    <section name="web.optimization" type="Web.Optimization.Configuration.OptimizationSection" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
+    <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" />
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><section name="web.optimization" type="Web.Optimization.Configuration.OptimizationSection" /></configSections>
   <connectionStrings>
     <clear />
     <add name="RMWContext" connectionString="CONNECTION_STRING" providerName="System.Data.SqlClient" />
@@ -29,11 +30,19 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="enableSimpleMembership" value="false" />
     <!--<add key="BaseContext RMW.DataLayer.BaseContext" 
-         value="RMW.DataLayer.BaseContext" />-->
+         value="RMW.DataLayer.BaseContext"/>-->
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5.1"/>
+      </system.Web>
+  -->
   <system.web>
-    <customErrors mode="Off"></customErrors>
-    <compilation debug="true" targetFramework="4.5" />
+    <customErrors mode="Off" />
+    <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
@@ -61,12 +70,15 @@
         <add name="CodeFirstRoleProvider" type="RMW.Membership.CodeFirstRoleProvider" connectionStringName="RMWContext" />
       </providers>
     </roleManager>
-  <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
-        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> --><httpModules>
-            <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" />
-        </httpModules><httpHandlers>
-            <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
-        </httpHandlers></system.web>
+    <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
+        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> -->
+    <httpModules>
+      <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" />
+    </httpModules>
+    <httpHandlers>
+      <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
+    </httpHandlers>
+  </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <rewrite>
@@ -84,21 +96,15 @@
         </rule>
       </rules>
     </rewrite>
-  <modules>
-            <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />
-        </modules><handlers>
-            <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />
-        </handlers></system.webServer>
+    <modules>
+      <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />
+    </modules>
+    <handlers>
+      <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
-      </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="DotNetOpenAuth.AspNet" publicKeyToken="2780ccd10d57b246" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.3.0.0" newVersion="4.3.0.0" />
@@ -113,11 +119,27 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages.Razor" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.1.0.0" newVersion="5.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.13.0" newVersion="1.2.13.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
     <legacyHMACWarning enabled="0" />
@@ -132,8 +154,8 @@
     <defaultProxy enabled="true" />
     <settings>
       <!-- This setting causes .NET to check certificate revocation lists (CRL) 
-			     before trusting HTTPS certificates.  But this setting tends to not 
-			     be allowed in shared hosting environments. -->
+           before trusting HTTPS certificates.  But this setting tends to not 
+           be allowed in shared hosting environments. -->
       <!--<servicePointManager checkCertificateRevocationList="true"/>-->
     </settings>
   </system.net>
@@ -142,7 +164,7 @@
       <untrustedWebRequest>
         <whitelistHosts>
           <!-- Uncomment to enable communication with localhost (should generally not activate in production!) -->
-          <!--<add name="localhost" />-->
+          <!--<add name="localhost"/>-->
         </whitelistHosts>
       </untrustedWebRequest>
     </messaging>
@@ -155,12 +177,12 @@
         <security requireSsl="false">
           <!-- Uncomment the trustedProviders tag if your relying party should only accept positive assertions from a closed set of OpenID Providers. -->
           <!--<trustedProviders rejectAssertionsFromUntrustedProviders="true">
-						<add endpoint="https://www.google.com/accounts/o8/ud" />
-					</trustedProviders>-->
+            <add endpoint="https://www.google.com/accounts/o8/ud"/>
+          </trustedProviders>-->
         </security>
         <behaviors>
           <!-- The following OPTIONAL behavior allows RPs to use SREG only, but be compatible
-					     with OPs that use Attribute Exchange (in various formats). -->
+               with OPs that use Attribute Exchange (in various formats). -->
           <add type="DotNetOpenAuth.OpenId.RelyingParty.Behaviors.AXFetchAsSregTransform, DotNetOpenAuth.OpenId.RelyingParty" />
         </behaviors>
       </relyingParty>
@@ -168,8 +190,8 @@
   </dotNetOpenAuth>
   <uri>
     <!-- The uri section is necessary to turn on .NET 3.5 support for IDN (international domain names),
-		     which is necessary for OpenID urls with unicode characters in the domain/host name.
-		     It is also required to put the Uri class into RFC 3986 escaping mode, which OpenID and OAuth require. -->
+         which is necessary for OpenID urls with unicode characters in the domain/host name.
+         It is also required to put the Uri class into RFC 3986 escaping mode, which OpenID and OAuth require. -->
     <idn enabled="All" />
     <iriParsing enabled="true" />
   </uri>
@@ -246,21 +268,35 @@
     </appender>
     <root>
       <level value="ALL" />
-      <!--<appender-ref ref="RollingFileAppender" />-->
+      <!--<appender-ref ref="RollingFileAppender"/>-->
       <appender-ref ref="AdoNetAppender" />
       <appender-ref ref="GlimpseAppender" />
     </root>
   </log4net>
-  <web.optimization>
+  
+  <glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
+    <!-- If you are having issues with Glimpse, please include this. It will help us figure out whats going on. 
+      -->
+    <logging level="Trace" />
+    <!-- Want to use Glimpse on a remote server? Ignore the LocalPolicy by removing this comment.
+      <runtimePolicies>
+        <ignoredTypes>
+          <add type="Glimpse.AspNet.Policy.LocalPolicy, Glimpse.AspNet"/>
+        </ignoredTypes>
+      </runtimePolicies>-->
+  </glimpse>
+<web.optimization>
     <bundles>
       <bundle virtualPath="~/Content/sample" transform="System.Web.Optimization.JsMinify, System.Web.Optimization">
         <content>
           <!-- Add some single files -->
           <!-- <add path="~/Scripts/validation.js" /> -->
-          <!-- <add path="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.2.min.js" /> -->
+          <!-- <add path="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.2.min.js" /> -->          
+
           <!-- Add a directory (and its subdirectories) -->
           <!-- <add path="~/Scripts/Plugins" searchPattern="*.js" searchSubdirectories="true" /> -->
         </content>
+        
         <!--
         If you want to apply multiple transformations, 
         you should remove the "transform" attribute from the bundle. 
@@ -273,15 +309,4 @@
         -->
       </bundle>
     </bundles>
-  </web.optimization>
-<glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
-      <!-- If you are having issues with Glimpse, please include this. It will help us figure out whats going on. 
-      -->
-      <logging level="Trace" />
-      <!-- Want to use Glimpse on a remote server? Ignore the LocalPolicy by removing this comment.
-      <runtimePolicies>
-        <ignoredTypes>
-          <add type="Glimpse.AspNet.Policy.LocalPolicy, Glimpse.AspNet"/>
-        </ignoredTypes>
-      </runtimePolicies>-->
-    </glimpse></configuration>
+  </web.optimization></configuration>
